--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next export"
+    "export": "next export",
+   "clean": "powershell Remove-Item -Recurse -Force .next\\cache"
   },
  
   "dependencies": {
