--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "start": "next start",
     "lint": "next lint",
     "export": "next export",
-   "clean": "powershell Remove-Item -Recurse -Force .next\\cache"
+    "clean": "powershell Remove-Item -Recurse -Force .next\\cache"
   },
- 
   "dependencies": {
     "@vercel/speed-insights": "^1.2.0",
+    "lenis": "^1.3.8",
     "mongoose": "^8.3.4",
     "next": "^15.2.2",
     "next-auth": "^4.24.11",
