--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@vercel/speed-insights": "^1.2.0",
+    "gsap": "^3.13.0",
     "lenis": "^1.3.8",
     "mongoose": "^8.3.4",
     "next": "^15.2.2",
